--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 					<h2>Try it yourself</h2>
 					<h3>Fork some code</h3>
 					<ul>
-						<li>https://github.com/aspnet/Home</li>
-						<li>https://github.com/davidfowl/HelloWorldVNext</li>
+						<li><a href="https://github.com/aspnet/Home" target="_blank">https://github.com/aspnet/Home</a></li>
+						<li><a href="https://github.com/davidfowl/HelloWorldVNext" target="_blank">https://github.com/davidfowl/HelloWorldVNext</a></li>
 					</ul>
 				</section>
 			</div>
